fix: add theme classes for dark mode into flight-info-menu & ticket cards

--- a/airways/src/app/shared/ticket-date-slider/ticket-date-card/ticket-date-card.component.scss
+++ b/airways/src/app/shared/ticket-date-slider/ticket-date-card/ticket-date-card.component.scss
@@ -10,7 +10,7 @@
   width: 225px;
   height: 70px;
 
-  background: $color-neutral100;
+  // background: $color-neutral100;
   border-left: 1px solid $color-neutral60;
 
   font-family: "Roboto";
